# fastapi-final-project

./: .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yaml
migrations/: env.py
migrations/versions/: 49c0f028673a_create_novelist_table.py  db4f0cf32865_add_table_books.py  ea4a9b42fc47_refactor_table_books.py  f484f9bd90ed_add_users_table.py
src/tcc_madrs/: app.py  database.py  models.py  sanitize.py  schemas.py  security.py  settings.py
src/tcc_madrs/routers/: auth.py  books.py  novelist.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_books.py  test_conta.py  test_db.py  test_init.py  test_novelist.py  test_users.py
